<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/laranja">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/fragment_exercicio"
            >
            <Button
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:text="@string/Voltar"
                android:drawableLeft="@drawable/arrow_left_bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/btnVoltar"
                android:background="@drawable/btn_padrao"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nome"
            android:id="@+id/txtNome"
            android:maxLength="95"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:paddingTop="30dp"
            android:paddingRight="150dp"
            android:visibility="gone"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:ems="10"
            android:hint="@string/Nome"
            android:textColorHint="@color/verde_hint"
            android:textAppearance="?android:textAppearanceLarge"
            android:id="@+id/edtNome"
            android:layout_gravity="center"
            android:paddingBottom="20dp"
            android:maxLength="100"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cpf"
            android:visibility="gone"
            android:id="@+id/txtCpf"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:paddingTop="20dp"
            android:paddingRight="150dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtCpf"
            android:textColorHint="@color/verde_hint"
            android:hint="@string/cpf"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left"
            android:layout_marginLeft="25dp"
            android:maxLength="14"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/observacao"
            android:id="@+id/txtObservacao"
            android:visibility="gone"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:paddingTop="20dp"
            android:paddingRight="100dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage|textMultiLine"
            android:maxLines="6"
            android:scrollHorizontally="false"
            android:maxLength="350"
            android:scrollbars="vertical"
            android:hint="@string/observacao"
            android:textColorHint="@color/verde_hint"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:id="@+id/edtObservacao"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Sexo"
            android:id="@+id/txtSexo"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginRight="160dp"
            android:layout_marginLeft="160dp"
            android:id="@+id/spnSexo"
            >

        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dtNascimento"
            android:id="@+id/txtDtNascimento"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dtpkDtNascimento"
            android:layout_gravity="center_horizontal"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:layout_gravity="right"
            >

        <Button
            android:layout_marginTop="50dp"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btnSalvar"
            android:text="@string/salvar"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@drawable/btn_padrao"/>

        </LinearLayout>
            <TextView
                android:id="@+id/hidden_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/SALVAR"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>