<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/laranja">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@drawable/fragment_exercicio"
        >
        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:text="@string/Voltar"
            android:drawableLeft="@drawable/arrow_left_bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/btnVoltar"
            android:background="@drawable/btn_padrao"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Novo Personal"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nome"
            android:id="@+id/txtNome"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:paddingRight="150dp"
            android:visibility="gone"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@color/verde_hint"
            android:hint="@string/nome"
            android:layout_gravity="center"
            android:paddingBottom="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cpf"
            android:id="@+id/txtCpf"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:visibility="gone"
            android:paddingRight="150dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="14"
            android:hint="@string/cpf"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@color/verde_hint"
            android:id="@+id/edtCpf"
            android:layout_marginLeft="30dp"
            android:layout_gravity="left"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cref"
            android:id="@+id/txtCref"
            android:layout_gravity="center"
            android:visibility="gone"
            android:paddingTop="20dp"
            android:paddingRight="150dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@color/verde_hint"
            android:hint="@string/cref"
            android:id="@+id/edtCref"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/senha"
            android:id="@+id/Senha"
            android:visibility="gone"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingRight="150dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@color/verde_hint"
            android:hint="@string/senha"
            android:id="@+id/edtSenha"
            android:maxLength="10"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@color/verde_hint"
            android:hint="@string/confirmar_senha"
            android:id="@+id/edtConfirmarSenha"
            android:maxLength="10"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            />

        <Button
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btnSalvar"
            android:text="@string/salvar"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@drawable/btn_padrao"
            />
    </LinearLayout>
</LinearLayout>